--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -6,6 +6,7 @@
     <title>Countdown timer</title>
     <link rel="stylesheet" href="css/common.css" />
   </head>
+
   <body>
     <p><a href="index.html">Go back</a></p>
 
@@ -30,6 +31,8 @@
         <span class="label">Seconds</span>
       </div>
     </div>
+
+    <div class="alert" id="alert"></div>
 
     <script src="js/02-timer.js" type="module"></script>
   </body>
